--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -9,7 +9,7 @@ Given a problem setting, it is said that an algorithm's predictive power relies 
 Conceputally the first type of error grows 
 
 
-For the next part, \textbf{x} \in $\mathrm{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$ and  $x,y$. $f$ will represent a function. 
+For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$ and  $x,y$. $f$ will represent a function. 
 $EPE\left(f \right) = E\left(L\left(Y - f(X) \right)^2 \right)  $ where $L(Y,f\left(X\right))$ is called the loss-function. The loss function is a non-negative real valued function chosen to penalize errors in prediction. In general 
 a way that would reflect higher values when diffe
 
