--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -9,9 +9,10 @@ Given a problem setting, it is said that an algorithm's predictive power relies 
 Conceputally the first type of error grows 
 
 
-For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$ and  $x,y$ while $f$ will represent a function. 
+For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$ while $f$ will represent a function. 
 
-We define $EPE\left(f \right) = E\left(L\left(Y - f(X) \right)^2 \right)  $ where $L(Y,f\left(X\right))$ is called the loss-function. The loss function is a non-negative real valued function chosen to penalize errors in prediction. In general 
+We define $EPE\left(f \right) = E\left(L\left(\textbf{y} - f(\textbf{x}) \right)^2 \right)  $ where $L(y,f\left(x\right))$ is called the loss-function which is a \textbf{semimetric} chosen to penalize errors in prediction. In general a cuadratic or absolute value functions are chosen, where the first is more favored for its smoothness.
+
 a way that would reflect higher values when diffe
 
 %\textit{The generalization performance of a learning method relates to its prediction capability on independent test data. Assessment of this performance is extremely important in practice, since it guides the choice of learning method or model, and gives us a measure of the quality of the ultimately chosen model.}
