--- a/section_Meta_Section_Writing_plan__.tex
+++ b/section_Meta_Section_Writing_plan__.tex
@@ -4,7 +4,7 @@
 
 \textbf{Despues} cross validation, variance, bias, errors, metrics, scores y similar.
 
-\textbf{Finalizar} con 4/5 clasificadores usuales como: 
+\textbf{Finalizar} con 4/5 clasificadores usuales y explicar los conceptos que los motivan, las formulas, los hiperparametros y las funciones a minmizar. Tambien dar algun \textit{overview} de como sirven para tal o cual caso, ventajas y desventajas segun tal autor: 
 \begin{itemize}
 	\item multinomial naive bayes (por su simplicidad y eficiencia computacional)
 	\item "full" logistic regression (a diferencia de la intro anterior con la parte de regularizacion, con comentarios a sgd y su eficiencia, etc. )
