--- a/section_Technical_Observations_Python_sklearn__.tex
+++ b/section_Technical_Observations_Python_sklearn__.tex
@@ -1,4 +1,5 @@
-\section{Technical Observations}
+\section{Machine Learning in Practice: Technical Observations}
+\textbf{TODO A desarrollar}
 Python, sklearn, pandas, graphlab, etc
 
 Data process raw data by reading in chunks from huge files (compressed filesizes amount to 1TB), applying filters like modulus 10.
