--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -45,7 +45,7 @@ To illustrate further the supervised classification scenario, a brief notation o
 
 Let's suppose that the problem is to determine if a user belongs to the province of \textit{Cordoba} vs the rest of the provinces. This brings us to a learning problem with only two classes. %us to a two class learning problem.
  
-The objective is to build a learner $f$ from a linear combination of the input features that will predict the target output. Ideally we would have that for every sample $y =  f\left(\sum_{j}\theta_jx_j\right)$ \label{formula:1} \footnote{In formula \ref{formula:1} we have omitted the intercept parameter , generally noted as $\theta_0$. The reason for this is that one can include this parameter directly if we allow for an implicit feature $X_0$ in $X$ which is a vector with all of its components equal to 1.  } where $\theta$ is unknown and generally referred to as a coefficient or parameter. However the learner will approximate the target with $y \approx \hat{y} = f\left(\sum_{j}\theta_jx_j\right)$ and the first idea will be to find the best fit parameters $\hat{\theta}$. Then 
+The objective is to build a learner $f$ from a linear combination of the input features that will predict the target output. Ideally we would have that for every sample $y =  f\left(\sum_{j}\theta_jx_j\right)$ \label{formula:1} \footnote{In formula \ref{formula:1} we have omitted the intercept parameter , generally noted as $\theta_0$. The reason for this is that one can include this parameter directly if we allow for an implicit feature $X_0$ in $X$ which is a vector with all of its components equal to 1.  } where $\hat{\theta$} is unknown and generally referred to as a coefficient or parameter. However the learner will approximate the target with $y \approx \hat{y} = f\left(\sum_{j}\theta_jx_j\right)$ and the first idea will be to find the best fit parameters $\hat{\theta}$. Then 
 
 \footnote{In this setting it is common to say that the classifier is a generalized linear model. This might confuse the reader when observing that a logistic regression's output is certainly \textbf{not} linear on the inputs. However, the term referrs to the fact that there exists a bijective function $g(x) = f^{-1}(x)$ such that the transformed outputs are linear in the inputs i.e. $g(y) = \langle x, \theta \rangle$ }
 
