--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -13,7 +13,13 @@ For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input va
 
 We define $EPE\left(f \right) = E\left(L\left(\textbf{y} - f(\textbf{x}) \right) \right)  $ where $L(y,f\left(x\right))$ is called the loss-function which is a \textbf{semimetric} chosen to penalize errors in prediction. In general a cuadratic or absolute value functions are chosen, where the first is more favored for its smoothness. 
 
-For the the squared loss case, we would have that  $EPE\left(f \right) = \int [y = f(x)]^2 P(x,y)dxdy$ 
+For the the squared loss case, we would have that  
+
+\begin{equation} \label{eq:expectedError}
+EPE\left(f \right) = \int [y - f(x)]^2 P(x,y)dxdy
+%\sum_{i=0}^{\infty} a_i x^i
+\end{equation}
+
 
 a way that would reflect higher values when diffe
 
