--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -23,9 +23,7 @@ EPE\left(f \right) = \int [y - f(x)]^2 P(x,y)dxdy
 
 %\sum_{i=0}^{\infty} a_i x^i
 \end{equation}
-
-
-a way that would reflect higher values when diffe
+if we decide to condition on $\textbf{x}$
 
 %\textit{The generalization performance of a learning method relates to its prediction capability on independent test data. Assessment of this performance is extremely important in practice, since it guides the choice of learning method or model, and gives us a measure of the quality of the ultimately chosen model.}
 
