--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -19,7 +19,7 @@ For the the squared loss case, we would have that
 EPE\left(f \right) = \int [y - f(x)]^2 P(x,y)dxdy
 
 \\
-= E_{\textbf{x}} \left[ E_{\textbf{y}|\textbf{x}} \left[  \left( \textbf{y} - f(\textbf{x})  \right)^2 \right]  \right]
+= \mathop{\mathbb{E}}_{\textbf{x}} \left[ \mathop{\mathbb{E}}_{\textbf{y}|\textbf{x}} \left[  \left( \textbf{y} - f(\textbf{x})  \right)^2 \right]  \right]
 
 %\sum_{i=0}^{\infty} a_i x^i
 \end{equation}
@@ -31,7 +31,7 @@ if we decide to condition on $\textbf{x}$
 
 \textbf{Cross Validation}:  
 \textit{simplest and most widely used method... This method directly estimates the expected extra-sample error
-$Error = E[L(Y,\hat{f}(X))] $ i.e. the average the average generalization error when the method $\hat{f(X)}$ is applied to an independent test sample from the joint distribution of $X$ and $Y$ . As mentioned earlier, we might hope that cross-validation estimates the conditional error, with the training set. $\mathrm{T}$ held fixed. But cross-validation typically estimates well only the expected prediction error.}
+$Error = \mathop{\mathbb{E}}[L(Y,\hat{f}(X))] $ i.e. the average the average generalization error when the method $\hat{f(X)}$ is applied to an independent test sample from the joint distribution of $X$ and $Y$ . As mentioned earlier, we might hope that cross-validation estimates the conditional error, with the training set. $\mathrm{T}$ held fixed. But cross-validation typically estimates well only the expected prediction error.}
 
 \textit{Ideally, if we had enough data, we would set aside a validation set and use it to assess the performance of our prediction model. Since data are often scarce, this is usually not possible. To finesse the problem, K-fold cross-validation uses part of the available data to fit the model, and a different part to test it. We split the data into K roughly equal-sized parts; }
 
