--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -1,3 +1,6 @@
+$\newcommand{\Expect}{{\rm I\kern-.3em E}}$
+
+$\Expect$
 
 \section{Bias, Variance, Generalization and Model Complexity}
 
@@ -7,6 +10,7 @@
 Given a problem setting, it is said that an algorithm's predictive power relies on its ability to correctly label samples on independent test data. Measuring and comparing this ability to correctly label data amongst models is central to supervised learning.  The best learner will be said to have the lowest \textit{predictive error} where this error can be divided into an "error" due to \textit{bias} and an "error" due to \textit{variance}.
 
 Conceputally the first type of error grows 
+
 
 
 For the next part, \textbf{x} $\in \mathbb{R}^{p}$ will denote a random input variable and \textbf{y}  $\in \mathbb{R}$ will denote a random output variable with joint distribution $P\left(\textbf{x},\textbf{y}\right)$ while $f$ will represent a function. 
