--- a/newcommand_Expect_rm_I_kern__.tex
+++ b/newcommand_Expect_rm_I_kern__.tex
@@ -1,7 +1,7 @@
-$\newcommand{\Expect}{{\rm I\kern-.3em E}}$
 
 $\Expect$
 
+$\calG$
 \section{Bias, Variance, Generalization and Model Complexity}
 
 \subsection{Hastie Tibshiranie Friedman}
