--- a/header.tex
+++ b/header.tex
@@ -1,12 +1,19 @@
 \usepackage{subfigure}
 \usepackage{nicefrac}
-
+%paquetes para importar
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{amssymb}
+\usepackage[english]{babel}
+
 
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calE}{\mathcal{E}}
 \newcommand{\calL}{\mathcal{L}}
 
+%comandos de operadores de esperanza, varianza etc.
 \newcommand{\Expect}{{\rm I\kern-.3em E}}
+\newcommand{\Var}{\mathrm{Var}}
+\newcommand{\Cov}{\mathrm{Cov}} 
