--- a/Expect_calG_section_Bias_Variance__.tex
+++ b/Expect_calG_section_Bias_Variance__.tex
@@ -1,7 +1,8 @@
 
 $\Expect$
 
-$\calG$
+$\calG \calN \calE \calL$
+
 \section{Bias, Variance, Generalization and Model Complexity}
 
 \subsection{Hastie Tibshiranie Friedman}
