--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -47,13 +47,13 @@ Let's suppose that the problem is to determine if a user belongs to the province
  
 The objective is to build a learner $f$ from a linear combination of the input features that will predict the target output. Ideally we would have that for every sample $y = f(x) = h\left(\sum_{j}\theta_jx_j\right)$ \label{formula:1} \footnote{In formula \ref{formula:1} we have omitted the intercept parameter , generally noted as $\theta_0$. The reason for this is that one can include this parameter directly if we allow for an implicit feature $X_0$ in $X$ which is a vector with all of its components equal to 1.  } where $\theta$ is unknown and generally referred to as the coefficient or parameter. 
 
-If we let $ t^i = \theta \bullet\x^i \forall$ ,in the ideal case we could have that $\exists \theta s.t. \forall i $ 
+If we let $ t^i = \theta \bullet x^i \forall i $,in the ideal case we could have that $\exists \theta s.t. \forall i $ 
 \[
     %\begin{equation}
     t^i =
       \begin{cases}
-        &>0 \ \mbox{if} y =1 \\
-        &<0 \ \mbox{if} y =0.
+        &>0 \ \mbox{if} \ y=1 \\
+        &<0 \ \mbox{if} \ y=0.
       \end{cases}
     %\end{equation}
     \]
