--- a/subsubsection_Notation_and_Terminology_For__.tex
+++ b/subsubsection_Notation_and_Terminology_For__.tex
@@ -52,27 +52,43 @@ If we let $ t^i = \theta \bullet x^i \forall i $,in the ideal case we could have
     %\begin{equation}
     t^i =
       \begin{cases}
-        &>0 \ \mbox{if} \ y=1 \\
-        &<0 \ \mbox{if} \ y=0.
+        &>0 \ \mbox{if} \ y^i=1 \\
+        &<0 \ \mbox{if} \ y^i=0.
       \end{cases}
     %\end{equation}
     \]
 %       \forall 1 \leq i \leq n = y^i $
 
+Then if we were to use the heavside step function as  $h(z)$  where
 
-A more tractable function for this task is the logistic function
+\[
+    %\begin{equation}
+    h(t) =
+      \begin{cases}
+        &0 \ \mbox{if} \ z<0 \\
+        &\frac{1}{2} \ \mbox{if} \  z=0 \\
+        &1 \ \mbox{if} \  z>0.
+      \end{cases}
+    %\end{equation}
+    \]
 
-Under this model we would have the logistic function
+Given that $\nexists i \  s.t. \ t^i = 0$, the algorithm would then correctly classify all samples with their targets. 
+
+
+
+A more tractable function for this task is the logistic function which is an approximation of the heavyside step function. Here  
 
 \begin{equation} \label{eq:logit}
-h(t)  = \frac{e^{t}}{1 + e^{t}} = \frac{1}{1 + e^{-t}}  
+H(t)  = \frac{e^{t}}{1 + e^{t}} = \frac{1}{1 + e^{-t}}  
 
 %P(x,y)dxdy \left(f \right)
 %= \Expect_{\textbf{x}} \left[ \Expect_{\textbf{y}|\textbf{x}} \left[  \left( \textbf{y} - f(\textbf{x})  \right)^2 \right]  \right]
 %\sum_{i=0}^{\infty} a_i x^i
 \end{equation}
 
-The logistic function has the advantages of being smooth, invertible and well defined for all real numbers whereas the image is ${0,1}$. This property helps to the interpretability of a  . 
+where $H(z) \approx = \frac{1}{2} + \frac{1}{2}tanh(kz) = \frac{1}{1+e^{kz}} $ 
+
+The logistic function has the advantages of being smooth, invertible and well defined for all real numbers whereas the image is ${0,1}$. This property helps to the  of a  . 
 
 It also happens to be an approximating function to the
 
