--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -50,7 +50,7 @@
  year={2011}
 }
 
-@ARTICLE{breiman-statisticalmodeling:,
+@ARTICLE{breiman-statisticalmodeling,
     author = {Leo Breiman},
     title = {Statistical modeling: The two cultures},
     journal = {Statistical Science},
