--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -12,4 +12,10 @@ The second type of problems is where the output $Y$ is missing altogether from t
 
 Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When outputs $Y$ types' are of a \textit{qualitative} nature then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised regression. For this work we will focus on the supervised aspect of machine learning.
 
-In these type of problems the theoretical aspect and the computational aspect are both of interest. Algorithms are generally applied ina given environment and thus are expected to be executed in a reasonable amount of time. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} In its essence, the machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} It also puts a great amount of weight on efficiency and computational scalability. 
+In these type of problems the theoretical aspect and the computational aspect are both of interest. Algorithms are generally applied in a given setting and, as such, are expected to be executed in a reasonable amount of time and with a certain level of performance. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} In its essence, the machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} It also puts a great amount of weight on efficiency and computational scalability. 
+
+%At this point it is important to start noting
+
+These subtle differences in the way of approaching a problem also reflect themselves in the terminology used. Here most terms have equivalent or similar notations in statistics. To start off, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables or \textit{covariates} are named as features. 
+%Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
+
