--- a/a_subsubsection_Notation_and_Terminology__.tex
+++ b/a_subsubsection_Notation_and_Terminology__.tex
@@ -1,5 +1,3 @@
- a
-
 \subsubsection{Notation and Terminology}
 
 For the purpose of this work we will be talking of the training set, noted by $\mathrm{T}$ as the set of data examples. The objective is to build a probabilistic model which has the capacity to predict correctly the class instance of new data objects based on having seen information of other data objects. 
@@ -63,7 +61,7 @@ Then if we were to use the heavside step function $h(z)$  where
 
 \[
     %\begin{equation}
-    h(t) =
+    h(z) =
       \begin{cases}
         &0 \ \mbox{if} \ z<0 \\
         &\frac{1}{2} \ \mbox{if} \  z=0 \\
@@ -78,7 +76,7 @@ Under the assumption that $\nexists\  i \  s.t. \ t^i = 0$, the algorithm would 
 A more tractable function for this task is the logistic function which is an approximation of the heavyside step function. Here  
 
 \begin{equation} \label{eq:logit}
-h(t)  = \frac{e^{t}}{1 + e^{t}} = \frac{1}{1 + e^{-t}}  \\
+h(z)  = \frac{e^{z}}{1 + e^{z}} = \frac{1}{1 + e^{-z}}  \\
 
 and \  H(z) \approx = \frac{1}{2} + \frac{1}{2}tanh(kz) = \frac{1}{1+e^{kz}}  
 
